DRAKEN-2639: Refactored service according to new requirements
