# src/main/java/se/sundsvall/contract/api/model/ContractRequest.java
@@ -14,7 +14,7 @@ import lombok.Data;
 import lombok.EqualsAndHashCode;
 import lombok.NoArgsConstructor;
 import org.springframework.format.annotation.DateTimeFormat;
-import se.sundsvall.dept44.common.validators.annotation.OneOf;
+import se.sundsvall.contract.model.enums.LeaseType;
 import se.sundsvall.dept44.common.validators.annotation.ValidOrganizationNumber;
 import se.sundsvall.dept44.common.validators.annotation.ValidUuid;
 import se.sundsvall.dept44.models.api.paging.AbstractParameterPagingBase;
@@ -48,14 +48,8 @@ public class ContractRequest extends AbstractParameterPagingBase {
 	@Schema(description = "End date (format: yyyy-MM-dd)", example = "2023-01-01")
 	private LocalDate end;
 
-	/*
-	 * Backed by enum {@link se.sundsvall.contract.api.model.enums.LeaseType}
-	 */
 	@Schema(description = "Lease type", example = "LEASEHOLD")
-	@OneOf(value = {
-		"LAND_LEASE_PUBLIC", "SITE_LEASE_COMMERCIAL", "LAND_LEASE_RESIDENTIAL", "OBJECT_LEASE", "LAND_LEASE_MISC", "USUFRUCT_MOORING", "USUFRUCT_HUNTING", "USUFRUCT_FARMING", "USUFRUCT_MISC", "LEASEHOLD", "OTHER_FEE"
-	}, nullable = true)
-	private String leaseType;
+	private LeaseType leaseType;
 
 	@Schema(description = "Specific term to search for", example = "term", nullable = true)
 	@Size(min = 2, message = "Term must be at least 2 characters long if provided")
