# src/main/java/se/sundsvall/contract/api/model/Duration.java
@@ -1,12 +1,13 @@
 package se.sundsvall.contract.api.model;
 
 import io.swagger.v3.oas.annotations.media.Schema;
+import jakarta.validation.constraints.NotNull;
 import lombok.AccessLevel;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
-import se.sundsvall.dept44.common.validators.annotation.OneOf;
+import se.sundsvall.contract.model.enums.TimeUnit;
 
 @Data
 @Builder(setterPrefix = "with")
@@ -16,14 +17,10 @@ import se.sundsvall.dept44.common.validators.annotation.OneOf;
 public class Duration {
 
 	@Schema(description = "The lease duration value", example = "9")
+	@NotNull
 	private Integer leaseDuration;
 
-	/*
-	 * Backed by enum {@link se.sundsvall.contract.api.model.enums.TimeUnit}
-	 */
 	@Schema(description = "The unit of the duration value", example = "MONTHS")
-	@OneOf(value = {
-		"DAYS", "MONTHS", "YEARS"
-	})
-	private String unit;
+	@NotNull
+	private TimeUnit unit;
 }
