# src/main/java/se/sundsvall/contract/api/model/Notice.java
@@ -7,7 +7,8 @@ import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
-import se.sundsvall.dept44.common.validators.annotation.OneOf;
+import se.sundsvall.contract.model.enums.Party;
+import se.sundsvall.contract.model.enums.TimeUnit;
 
 @Data
 @Builder(setterPrefix = "with")
@@ -16,25 +17,14 @@ import se.sundsvall.dept44.common.validators.annotation.OneOf;
 @Schema(description = "Notice")
 public class Notice {
 
-	/*
-	 * Backed by enum {@link se.sundsvall.contract.api.model.enums.Party}
-	 */
 	@Schema(description = "The party type", example = "LESSOR")
-	@OneOf(value = {
-		"LESSOR", "LESSEE"
-	})
-	private String party;
+	private Party party;
 
 	@Schema(description = "The period of notice", example = "3")
 	@NotNull
 	private Integer periodOfNotice;
 
-	/*
-	 * Backed by enum {@link se.sundsvall.contract.api.model.enums.TimeUnit}
-	 */
 	@Schema(description = "The unit of the periodOfNotice value", example = "MONTHS")
-	@OneOf(value = {
-		"DAYS", "MONTHS", "YEARS"
-	})
-	private String unit;
+	@NotNull
+	private TimeUnit unit;
 }
