# src/main/java/se/sundsvall/contract/model/enums/ContractType.java
@@ -1,5 +1,8 @@
 package se.sundsvall.contract.model.enums;
 
+import io.swagger.v3.oas.annotations.media.Schema;
+
+@Schema(description = "ContractType", enumAsRef = true)
 public enum ContractType {
 	LEASE_AGREEMENT,
 	PURCHASE_AGREEMENT
