# src/main/java/se/sundsvall/contract/model/enums/TimeUnit.java
@@ -1,5 +1,8 @@
 package se.sundsvall.contract.model.enums;
 
+import io.swagger.v3.oas.annotations.media.Schema;
+
+@Schema(description = "TimeUnit", enumAsRef = true)
 public enum TimeUnit {
 	DAYS,
 	MONTHS,
